--- a/theme.toml
+++ b/theme.toml
@@ -1,11 +1,11 @@
 name = "terminimal"
 description = "A simple, minimal retro theme"
 license = "MIT"
-homepage = "https://github.com/pawroman/zola-theme-terminimal"
+homepage = "https://sirotenkosergey.github.io/-citizen-blog"
 min_version = "0.11.0"
 
 # An optional live demo URL
-demo = "https://pawroman.github.io/zola-theme-terminimal/"
+demo = "https://sirotenkosergey.github.io/-citizen-blog"
 
 [author]
 name = "Paweł Romanowski"
