--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 # Be sure to change these!
 base_url = "https://citizen-cosmos.github.io/new-citizen-blog"
-title = "Zola Terminimal theme"
+title = "Citizen Cosmos blog"
 
 # Sass compilation is required
 compile_sass = true
@@ -28,7 +28,7 @@ accent_color = "blue"
 background_color = "blue"
 
 # The logo text - defaults to "Terminimal theme"
-logo_text = "Terminimal theme"
+logo_text = "Citizen Cosmos"
 
 # The logo link - defaults to base_url.
 #logo_home_link = "/take/me/away!"
