--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 # Be sure to change these!
-base_url = "https://citizen-cosmos.github.io/new-citizen-blog"
+base_url = "https://citizen-cosmos.github.io/manuscripts"
 title = "Citizen Cosmos blog"
 
 # Sass compilation is required
