--- a/.github/workflows/publish-pages.yml
+++ b/.github/workflows/publish-pages.yml
@@ -10,7 +10,7 @@ jobs:
     name: Publish site
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout master
+    - name: Checkout main
       uses: actions/checkout@v3.0.0
     - name: Build and deploy
       uses: shalzz/zola-deploy-action@v0.16.1
